--- a/styles/styles.css
+++ b/styles/styles.css
@@ -51,6 +51,10 @@ h3 {
     text-align: center !important;
 }
 
+/* .justify {
+    text-align: justify !important;
+} */
+
 .privacy-h3 {
     font-size: 24px !important;
     color: black !important;
