Updated branding color & prices

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -126,6 +126,26 @@ ul li {
     /* border-color: #113c8a !important; */
 }
 
+.info-button-green {
+    background-color: #118a31 !important;
+    color: white !important;
+}
+
+.info-button-green:hover {
+    color: black !important;
+    background-color: white !important;
+}
+
+.info-button-brick {
+    background-color: #b23f20 !important;
+    color: white !important;
+}
+
+.info-button-brick:hover {
+    color: black !important;
+    background-color: white !important;
+}
+
 button {
     padding: 10px 20px;
     display: block;
@@ -204,6 +224,10 @@ picture {
 
 .card-header-green {
     background-color: #118a31 !important;
+}
+
+.card-header-brick {
+    background-color: #b23f20 !important;
 }
 
 .card-header-dark {
