Updated brick color

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -137,7 +137,7 @@ ul li {
 }
 
 .info-button-brick {
-    background-color: #b23f20 !important;
+    background-color: #8d361e !important;
     color: white !important;
 }
 
@@ -227,7 +227,7 @@ picture {
 }
 
 .card-header-brick {
-    background-color: #b23f20 !important;
+    background-color: #8d361e !important;
 }
 
 .card-header-dark {
