--- a/styles/styles.css
+++ b/styles/styles.css
@@ -37,6 +37,15 @@ h1 a:hover {
     font-weight: bold !important;
 }
 
+.h2-price {
+    margin-bottom: 5px !important;
+    margin-top: 5px !important;
+}
+
+.h2-price:last-of-type {
+    margin-bottom: 30px !important;
+}
+
 h2 {
     color: black !important;
     text-align: center !important;
@@ -48,6 +57,11 @@ h2 {
 
 h3 {
     font-size: 16px !important;
+    text-align: center !important;
+}
+
+.h3-price {
+    font-size: 19px !important;
     text-align: center !important;
 }
 
